Thu Jun 12 15:55:57 2003  Owen Taylor  <otaylor@redhat.com>

	* gtkdoc-mkhtml.in (declaration): Replace head -1 with -n 1.
	(Merge change by Elliot Lee from Red Hat package)

2003-06-11  Matthias Clasen  <maclas@gmx.de>

	* doc/gnome.txt: Updates to the documentation of inline comments.

2003-06-03  Matthias Clasen  <maclas@gmx.de>

	* gtk-doc.spec.in: Add a missing Provides: and include the .pc file.  
	(#106568, Joe Pranevich)

2003-05-27  Matthias Clasen  <maclas@gmx.de>

	* gtkdoc-mkdb.in (GetSignals): 
	(GetArgs): Add signals and properties to the statistics.
	(OutputMissingDocumentation): Emit undocumented signals and
	properties.  (#113645)

2003-04-21  Matthias Clasen  <maclas@gmx.de>

	* tools/docpercentages.pl: Fix autolinkification for undocumented
	symbols.  

	* doc/style-guide.txt: Typo fix.

2003-04-18  James Henstridge  <james@daa.com.au>

	* NEWS: add news items.

	* configure.in: increment version number.

2003-03-14  Matthias Clasen  <maclas@gmx.de>

	* gtkdoc-mkdb.in (OutputBook): Fix the public identifier for
	DocBook V3.0: Davenport, not DavenPort.  
	(#108343, Mariano Suarez-Alvarez) 

2003-03-10  James Henstridge  <james@daa.com.au>

	* configure.in: associate the chmod commands with the files they
	are chmod'ing.  This way config.status will always run the correct
	chmod command.

2003-03-04  James Henstridge  <james@daa.com.au>

	* configure.in: look up the docbook DTD by public id rather than
	system id.

2003-02-26  Matthias Clasen  <maclas@gmx.de>

	* gtkdoc-mkdb.in (GetArgs): Prefer template or comment docs over
	blurbs only if they're nonempty, otherwise the empty docs from the
	templates override all the blurbs.

2003-02-26  James Henstridge  <james@daa.com.au>

	* autogen.sh (THEDIR): set up so that it will choose automake 1.7
	or 1.6 in preference to 1.4.  Passes distcheck okay.

	* configure.in: update configure.in script to match
	recommendations of newer autoconf's, and add an AC_PREREQ()