@@ -1,3 +1,8 @@
+2003-06-15  Matthias Clasen  <maclas@gmx.de>
+
+	* gtkdoc-mkdb.in (GetSignals): 
+	(GetArgs): Emit Since: information for signals and properties.
+
 Thu Jun 12 15:55:57 2003  Owen Taylor  <otaylor@redhat.com>
 
 	* gtkdoc-mkhtml.in (declaration): Replace head -1 with -n 1.
